--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Boilerplate for simple projects",
   "main": "index.html",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
