--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-less": "^3.3.2",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "jquery": "^3.3.1"
   },
   "devDependencies": {
     "browser-sync": "^2.18.13",
